--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,10 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
+               
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Holi</p>
+
             </div>
         </div>
     </body>
